--- a/now.json
+++ b/now.json
@@ -5,6 +5,6 @@
       { "src": "api/main.go", "use": "@now/go" }
     ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "api/index.go" }
+      { "src": "/api/(.*)", "dest": "api/main.go" }
     ]
   }
